--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-07-28 19:22:32 -0500 
+%% Created for Sameer Deshpande at 2025-08-07 12:46:20 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Yurko2019_nflWAR,
+	author = {Ronald Yurko and Samuel Ventura and Maksim Horowitz},
+	date-added = {2025-08-07 12:43:28 -0500},
+	date-modified = {2025-08-07 12:46:18 -0500},
+	journal = {Journal of Quantitative Analysis in Sports},
+	number = {3},
+	pages = {163--183},
+	title = {{nflWAR}: A reproducible method for offensive player evaluation in football},
+	volume = {15},
+	year = {2019}}
 
 @article{Baumer2015_openWAR,
 	author = {Benjamin S. Baumer and Shane T. Jensen and Gregory J. Matthews},
